<resources>
  <string name="app_name">AZUL</string>
  <string name="user">User</string>
  <string name="ok_lable">OK</string>
  <string name="continue_lable">Continue</string>
  <string name="loading_lbl">Loading…</string>
  <string name="error_label">Error</string>
  <string name="session_msg">Your session has expired. Please login again.</string>
  <string name="no_internet_msg">Please check your internet connection.</string>
  <string name="user_incorrect">User name incorrect</string>
  <string name="password_incorrect">Login error Invalid password.</string>
  <string name="login">Log in</string>
  <string name="forgot_password">Did you forget your password?</string>
  <string name="membership_request">Request your membership here</string>
  <string name="not_azul_customer">Still not a AZUL customer?</string>
  <string name="get_blue_code">Get your BLUE QR Code</string>
  <string name="qr_bar">BLUE QR Code Request</string>
  <string name="forgot_bar">I forgot my password</string>
  <string name="register_bar">BLUE affiliation</string>
  <string name="alert">To complete the application, you will be \n directed to the AZUL website \n in azul.com.do Do you want to continue \n the process?</string>
  <string name="pin_text">Set your security PIN \n</string>
  <string name="access_data">Access data</string>
  <string name="profile">My profile</string>
  <string name="my_info">My information</string>
  <string name="my_business">My business</string>
  <string name="units_locations">Localities</string>
  <string name="call_center">BLUE\nCenter</string>
  <string name="back_text">Get out</string>
  <string name="confirm_pin">Enter your PIN</string>
  <string name="location">Location</string>
  <string name="slider_heading">Sales summary</string>
  <string name="home">beginning</string>
  <string name="add">Create request</string>
  <string name="generate_statement">Generate status</string>
  <string name="consultant">Consultant</string>
  <string name="order_product">Order products</string>
  <string name="qr_code">QR code</string>
  <string name="linkPage">Payments Link</string>
  <string name="hello">Hello!</string>
  <string name="blue_qr_code">BLUE QR Code</string>
  <string name="quick_sale">Quick sale</string>
  <string name="access_account">Access your account</string>
  <string name="Transacciones_qr">QR transactions</string>
  <string name="Settled_transactions">Settled transactions</string>
  <string name="optional">Optional</string>
  <string name="alert_title">The digits don\'t match.</string>
  <string name="alert_message">Please try again.</string>
  <string name="alert_continue">Continue</string>
  <string name="confirm_pin_first_time">Confirm your pin</string>
  <string name="username_error">Please enter your username to continue.</string>
  <string name="pass_error">Please enter your password to continue.</string>
  <string name="total_received">Total to receive</string>
  <string name="net_sales">Net sales</string>
  <string name="total_discount">Total discount</string>
  <string name="amount">Amount:</string>
  <string name="quantity">Quantity:</string>
  <string name="time_frame1">- Last day</string>
  <string name="time_frame2">- Month to date</string>
  <string name="time_frame3">- Previous Month</string>
  <string name="change_profile_picture">Change profile picture</string>
  <string name="username">Username</string>
  <string name="username_lastname">Names(s)/Last Name(s)</string>
  <string name="identification_number">No. identification (certificate or passport)</string>
  <string name="dob">Date of birth</string>
  <string name="occupation">Occupation</string>
  <string name="telephone">Telephone</string>
  <string name="cellular">Cellular</string>
  <string name="email">Email</string>
  <string name="role">Role</string>
  <string name="last_access">Last access</string>
  <string name="password">Password</string>
  <string name="unlink_accounts">Unlink accounts</string>
  <string name="my_profile">My profile</string>
  <string name="name">Name</string>
  <string name="rnc">RNC</string>
  <string name="industrial_sector">Industrial sector</string>
  <string name="zero">0</string>
  <string name="one">1</string>
  <string name="two">2</string>
  <string name="three">3</string>
  <string name="four">4</string>
  <string name="five">5</string>
  <string name="six">6</string>
  <string name="seven">7</string>
  <string name="eight">8</string>
  <string name="nine">9</string>
  <string name="my_qr_code">My QR Code</string>
  <string name="my_payment_received">My payments received</string>
  <string name="show_qrcode">Show this QR code to your customers</string>
  <string name="swipe_left">Swipe left to see the day\'s sales</string>
  <string name="sales_of_day">Sales of the day</string>
  <string name="consultation">Consultation</string>
  <string name="liquidated_transactions">Liquidated Transactions</string>
  <string name="qr_transactions">QR transactions</string>
  <string name="top_transactions">Tap on Phone Transactions</string>
  <string name="last_day">Last\nDay</string>
  <string name="month_to_date">Month to\ndate</string>
  <string name="previous_month">Previous\nMonth</string>
  <string name="advanced">Range of \n date</string>
  <string name="amount_number">RD$ 145,674,784.9</string>
  <string name="net_sale_amount">RD$ 145,674.90</string>
  <string name="net_discount_amount">RD$  3,641,894.6</string>
  <string name="quantity_number">89</string>
  <string name="date">20/04/2021</string>
  <string name="fifteen_day">01/04/2021 - 15/04/2021</string>
  <string name="month">March 2021</string>
  <string name="generate_status">Generate Status</string>
  <string name="select_date_range">Select Date range</string>
  <string name="date_compare">To date must be smaller than from date</string>
  <string name="current_date_compare">Selected date must be smaller than current date</string>
  <string name="from_date">Since:</string>
  <string name="to_date">Until:</string>
  <string name="req_product">Request product</string>
  <string name="payment_link">Payment link</string>
  <string name="today">Today</string>
  <string name="monto">Amount</string>
  <string name="reference_no">Reference No.</string>
  <string name="Cancel">Cancel</string>
  <string name="no_records">There are no transactions</string>
  <string name="ref_no_label">No. Ref. </string>
  <string name="amount_label">RD$ </string>
  <string name="swipe_right">Swipe right to see your QR Code</string>
  <string name="No.lot">No. lot</string>
  <string name="No.approval">No. approval</string>
  <string name="No.terminal">No. terminal</string>
  <string name="No.card">No. card</string>
  <string name="GenerateLink">Generate link</string>
  <string name="itbis_error">ITBIS exceeds the total amount</string>
  <string name="less_amount_error">Enter an amount greater than zero (0)</string>
  <string name="less_tax_error">Enter an ITBIS greater than zero (0)</string>
  <string name="Tarjeta">Card</string>
  <string name="cancel_button_message">Are you sure you want to cancel?</string>
  <string name="close_button_message">Are you sure you want to close?</string>
  <string name="qr_message">Show this QR code to your customers or send it by pressing the share icon</string>
  <string name="preferencias">Preferences</string>
  <string name="itbis_tax">ITBIS:</string>
  <string name="include_itbis">(Includes ITBIS)</string>
  <string name="total_amount">Total amount:</string>
  <string name="customer_email">Email:</string>
  <string name="customer_name">Customer Name:</string>
  <string name="order_no">No. order/sale:</string>
  <string name="transaction_type">Transaction Type:</string>
  <string name="localidad">Locality:</string>
  <string name="email_error_msg">Enter a valid email</string>
  <string name="link_share_msg">Payment link generated!</string>
  <string name="copy_label">Copy</string>
  <string name="share_label">Share</string>
  <string name="next_sale">Next sale</string>
  <string name="close">Close</string>
  <string name="get_blue_qr">Get your BLUE QR Code</string>
  <string name="login_pin_error_alert_title">The PIN entered is incorrect</string>
  <string name="login_pin_error_alert_message">Please check and type again.</string>
  <string name="login_try_count_label">(Try </string>
  <string name="pin_blocked_message">PIN blocked for exceeding the number of attempts allowed</string>
  <string name="pin_blocked_title">PIN blocked</string>
  <string name="four_digits_same_error_msg">All 4 digits cannot be equal</string>
  <string name="four_digits_same_error_title">PIN not allowed</string>
  <string name="sequential_pin">Digits cannot be sequential</string>
  <string name="generate_pay_link">Generate payment link</string>
  <string name="generate_qr_location_title">Select the location of then QR code you want to display</string>
  <string name="generate_link_location_title">Select the location to generate a payment link</string>
  <string name="link_validation_title">Confirm the following fields before generating the payment link:</string>
  <string name="not_permitted_title">You are not affiliated with this product</string>
  <string name="get_blue_qr_here">Get your BLUE QR Code here</string>
  <string name="get_blue_payment_link">Get your BLUE Payment Link here</string>
  <string name="Paymen_link_request">Payment Link Request</string>
  <string name="no_access_for_functionality">Your profile does not have access to this functionality</string>
  <string name="no_access_for_functionality_msg">Please contact your company administrator to set them up.</string>
  <string name="pravious_pin_alert">Use a different PIN than the previous one</string>
  <string name="pin_alert_in_one_day">Action allowed 1 time per day. Try again in 24 hours</string>
  <string name="zero_amount">0.00</string>
  <string name="currancy_format">RD$ </string>
  <string name="device_not_compatible">Sorry, this app is not compatible with this device.</string>
  <string name="warning">Warning !</string>
  <string name="exit_lablel">Exit</string>
  <string name="description_fileprovider">This is for download file</string>
  <string name="file_label"> </string>
  <string name="internal_server_error">Error de servidor interno</string>
  <string name="Status_Nuevo">You must configurate your username and password to be able to access to the AZUL APP</string>
  <string name="active_temporal_password">You must configurate your username and password to be able to access to the AZUL APP</string>
  <string name="New_Expired">Your temporal credential has expired. Do you want to generate new ones?</string>
  <string name="Active_expired">Sorry your password is expired. Get a new one here.</string>
  <string name="Blocked">Sorry your password is blocked. Receive assistance to get a new one here.</string>
  <string name="Disabled">Sorry your profile is Disabled. Do you want to receive asisstence?</string>
  <string name="Under_investigation">Sorry your profile is Disabled. Do you want to receive asisstence?</string>
  <string name="Status_Nuevo_title">Set your username and password</string>
  <string name="active_temporal_password_title">Set your password</string>
  <string name="New_Expired_title">Your temporary access expired</string>
  <string name="Active_expired_title">Your temporary password expired</string>
  <string name="Blocked_title">Your profile is blocked</string>
  <string name="Disabled_title">Your profile is disabled</string>
  <string name="Under_investigation_title">Your profile is disabled</string>
  <string name="yes">Yes</string>
  <string name="payment_declined">Payment Declined</string>
  <string name="try_again_label">Try again</string>
  <string name="new_sale_label">New sale</string>
  <string name="declined_1">Try another card, device, or payment method</string>
  <string name="declined_2">We are sorry. Contact your account officer to verify your location settings</string>
</resources>