<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@drawable/bd_slider_widget">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/totalReceived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_received"
                    android:textColor="@color/total_received"
                    android:textSize="14sp"
                    android:fontFamily="@font/vag_bold"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/font_hint"
                    android:textSize="10sp"
                    android:fontFamily="@font/vag_bold"
                    android:layout_toStartOf="@id/timeFrame"/>

                <TextView
                    android:id="@+id/timeFrame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/time_frame"
                    android:textSize="10sp"
                    android:fontFamily="@font/vag_light"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_number"
                    android:textColor="@color/font_hint"
                    android:textSize="20sp"
                    android:fontFamily="@font/vag_bold"
                    android:layout_below="@id/totalReceived"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_style"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/netSales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/net_sales"
                    android:textColor="@color/total_received"
                    android:textSize="14sp"
                    android:fontFamily="@font/vag_bold"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/totalDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_discount"
                    android:textColor="@color/total_received"
                    android:textSize="14sp"
                    android:fontFamily="@font/vag_bold"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/netSalesAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/total_received"
                    android:textSize="10sp"
                    android:fontFamily="@font/vag_bold"
                    android:layout_marginEnd="8dp"
                    android:layout_below="@id/netSales"/>

                <TextView
                    android:id="@+id/netSalesAmountNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/net_sale_amount"
                    android:textColor="@color/font_hint"
                    android:textSize="12sp"
                    android:fontFamily="@font/vag_light"
                    android:layout_below="@+id/netSales"
                    android:layout_toEndOf="@id/netSalesAmount"/>

                <TextView
                    android:id="@+id/totalDiscountNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/net_discount_amount"
                    android:textColor="@color/font_hint"
                    android:textSize="12sp"
                    android:fontFamily="@font/vag_light"
                    android:layout_below="@id/totalDiscount"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textColor="@color/total_received"
                    android:textSize="10sp"
                    android:fontFamily="@font/vag_bold"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="8dp"
                    android:layout_below="@id/netSalesAmount"/>

                <TextView
                    android:id="@+id/quantityNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_number"
                    android:textColor="@color/font_hint"
                    android:textSize="12sp"
                    android:fontFamily="@font/vag_light"
                    android:layout_below="@+id/totalDiscountNumber"
                    android:layout_toEndOf="@id/quantity"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>