<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:orientation="vertical">

    <!--line style-->

    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/view_rounded_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/vag_bold"
        android:text="@string/consultation"
        android:textColor="@color/bottom_sheet_font1"
        android:textSize="20sp" />

    <!--line style-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/line_style" />

    <LinearLayout
        android:id="@+id/miPerfilLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="33dp"
        android:paddingTop="24dp"
        android:paddingEnd="34dp"
        android:paddingBottom="60dp">

      <TextView
          android:id="@+id/tvLiquidatedTrans"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/vag_bold"
          android:padding="8dp"
          android:text="@string/Settled_transactions"
          android:textColor="@color/font_hint"
          android:textSize="16sp"
          app:drawableEndCompat="@drawable/ic_right_arrow_blue" />

      <TextView
          android:id="@+id/tvQrTransactions"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/vag_bold"
          android:padding="8dp"
          android:text="@string/qr_transactions"
          android:textColor="@color/font_hint"
          android:textSize="16sp"
          app:drawableEndCompat="@drawable/ic_right_arrow_blue" />

      <TextView
          android:id="@+id/tvToPTransactions"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/vag_bold"
          android:padding="8dp"
          android:text="@string/top_transactions"
          android:textColor="@color/font_hint"
          android:textSize="16sp"
          app:drawableEndCompat="@drawable/ic_right_arrow_blue" />


    </LinearLayout>

  </LinearLayout>


</LinearLayout>